@@ -5,6 +5,7 @@
 
 * added ability to change the table prefix easy via config.json, please read
   <http://yals.de/OQRv0Y> for more informations
+* use optional DropletsExtension to autoload mc_frontend.css  
 
 0.20 - 2012-06-14
 
